Fixed extra space before inline elements in choices

--- a/styles/gray_pdf/modules/dita/choices_steps_substeps_numbering.css
+++ b/styles/gray_pdf/modules/dita/choices_steps_substeps_numbering.css
@@ -81,7 +81,15 @@ li.substep {
 }
 
 /* Fix the placement of choice element children - verify. */
-.choice > * {
+.choice > .note,
+.choice > pre.codeblock,
+.choice > .image,
+.choice > .fig,
+.choice > table,
+.choice > .p,
+.choice > p,
+.choice > .lq,
+.choice > dl {
   margin-left: 5px;
 }
 
